Update email templates and styles
- Adjusted button padding in button.css for better aesthetics.
- Added new HTML templates for email notifications:
  - order-confirmation.html
  - welcome.html
  - verification.html
  - request-change-email.html
  - reset-password.html
  - password-changed.html
  - subuser-created.html
  - email-changed.html
- Removed outdated HTML templates:
  - order-confirmation.html
  - welcome.html
  - verification.html

--- a/templates/auth/reset-password.html
+++ b/templates/auth/reset-password.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/styles/styles.css" />
-    <title>Bestellbestätigung - Grundriss Schmiede GmbH</title>
+    <title>Passwort zurücksetzen - Grundriss Schmiede GmbH</title>
   </head>
   <body>
     <header class="header">
       <img
-        src="assets/images/main-logo.png"
+        src="/assets/images/main-logo.png"
         alt="Grundriss Schmiede GmbH Logo"
       />
     </header>
@@ -17,52 +17,24 @@
     <main>
       <section>
         <p>Sehr geehrter <strong>Max Mustermann</strong>,</p>
-        <p>Wir freuen uns, Ihnen heute Ihre Bestellung auszuliefern.</p>
 
-        <div class="highlight">
-          <div class="highlight-details">
-            <span>Auftrags-ID:</span>
-            <span style="font-weight: normal">123456789</span>
-          </div>
-          <div class="highlight-details">
-            <span>Bezeichnung:</span>
-            <span style="font-weight: normal">2D Grundriss</span>
-          </div>
-        </div>
-
-        <div class="additional-info">
-          <span>Änderungswünsche können Sie ebenfalls bequem aus Ihrem</span>
-          <a class="link" href="#" target="_blank" rel="noopener noreferrer"
-            >Kundenbereich</a
-          >
-          <span>heraus beauftragen.</span>
-        </div>
-      </section>
-
-      <section class="review-section">
         <p>
-          Waren Sie mit unserem Service zufrieden? Wir würden uns sehr über Ihre
-          <strong>Google Bewertung</strong> freuen!
+          Sie haben kürzlich eine Anfrage zum Zurücksetzen Ihres Passworts
+          gestellt. Klicken Sie auf den untenstehenden Button, um Ihr Passwort
+          zurückzusetzen:
         </p>
         <a
-          href="https://www.google.com/search?sca_esv=922155461cbe86eb&rlz=1C1CHBF_deDE1181DE1181&si=AMgyJEtREmoPL4P1I5IDCfuA8gybfVI2d5Uj7QMwYCZHKDZ-E-yFExyCI1e3v8PHszkn6p3u0PbmIvdKHesxXu7KOjMI1ikc45hF-4fF9vSChqLbl4yB2ddHT7wCTcTHLl7KweqK8YPYCRqmE-WAblRfnQqwhEgN7w%3D%3D&q=Grundriss+Schmiede+Rezensionen&sa=X&ved=2ahUKEwi4nsi03KiQAxU7QfEDHYqgIaYQ0bkNegQIHRAD&biw=1920&bih=911&dpr=1"
+          href="{{reset_link}}"
+          class="button"
           target="_blank"
           rel="noopener noreferrer"
-          class="button"
-          style="margin-bottom: 15px"
+          >Passwort zurücksetzen</a
         >
-          Jetzt bewerten
-        </a>
-
-        <p>Oder können wir etwas verbessern? Dann freuen wir uns auf Ihr</p>
-
-        <a
-          href="https://www.grundriss-schmiede.de/impressum"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="button"
-          >Feedback</a
-        >
+        <p></p>
+        <p>
+          Wenn Sie diese Anfrage nicht gestellt haben, ignorieren Sie diese
+          E-Mail bitte.
+        </p>
       </section>
     </main>
 
@@ -78,28 +50,28 @@
           target="_blank"
           rel="noopener noreferrer"
         >
-          <img src="assets/icons/facebook.svg" alt="Facebook" />
+          <img src="/assets/icons/facebook.svg" alt="Facebook" />
         </a>
         <a
           href="https://www.instagram.com/grundrissschmiede/#"
           target="_blank"
           rel="noopener noreferrer"
         >
-          <img src="assets/icons/instagram.svg" alt="Instagram" />
+          <img src="/assets/icons/instagram.svg" alt="Instagram" />
         </a>
         <a
           href="https://www.linkedin.com/company/grundriss-schmiede"
           target="_blank"
           rel="noopener noreferrer"
         >
-          <img src="assets/icons/linkedin.svg" alt="LinkedIn" />
+          <img src="/assets/icons/linkedin.svg" alt="LinkedIn" />
         </a>
         <a
           href="https://www.youtube.com/@Spacelutions-Deutschland"
           target="_blank"
           rel="noopener noreferrer"
         >
-          <img src="assets/icons/youtube.svg" alt="YouTube" />
+          <img src="/assets/icons/youtube.svg" alt="YouTube" />
         </a>
       </section>
 
