--- a/templates/auth/subuser-created.html
+++ b/templates/auth/subuser-created.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/styles/styles.css" />
-    <title>Verifizieren - Grundriss Schmiede GmbH</title>
+    <title>Subuser erfolgreich verifiziert - Grundriss Schmiede GmbH</title>
   </head>
   <body>
     <header class="header">
       <img
-        src="assets/images/main-logo.png"
+        src="/assets/images/main-logo.png"
         alt="Grundriss Schmiede GmbH Logo"
       />
     </header>
@@ -18,21 +18,9 @@
       <section>
         <p>Sehr geehrter <strong>Max Mustermann</strong>,</p>
         <p>
-          vielen Dank für Ihre Registrierung bei der Grundriss Schmiede GmbH.
+          Ihr Subuser <strong>Maxi Mustermann</strong> wurde erfolgreich
+          erstellt und verifiziert.
         </p>
-        <p>
-          Verfizieren Sie bitte Ihre <strong>E-Mail-Adresse</strong>, um Ihren
-          Kundenbereich zu aktivieren.
-        </p>
-
-        <a
-          class="button"
-          href="https://www.grundriss-schmiede.de/verify-email?token=abcdef123456"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          E-Mail-Adresse verifizieren
-        </a>
       </section>
     </main>
 
@@ -48,28 +36,28 @@
           target="_blank"
           rel="noopener noreferrer"
         >
-          <img src="assets/icons/facebook.svg" alt="Facebook" />
+          <img src="/assets/icons/facebook.svg" alt="Facebook" />
         </a>
         <a
           href="https://www.instagram.com/grundrissschmiede/#"
           target="_blank"
           rel="noopener noreferrer"
         >
-          <img src="assets/icons/instagram.svg" alt="Instagram" />
+          <img src="/assets/icons/instagram.svg" alt="Instagram" />
         </a>
         <a
           href="https://www.linkedin.com/company/grundriss-schmiede"
           target="_blank"
           rel="noopener noreferrer"
         >
-          <img src="assets/icons/linkedin.svg" alt="LinkedIn" />
+          <img src="/assets/icons/linkedin.svg" alt="LinkedIn" />
         </a>
         <a
           href="https://www.youtube.com/@Spacelutions-Deutschland"
           target="_blank"
           rel="noopener noreferrer"
         >
-          <img src="assets/icons/youtube.svg" alt="YouTube" />
+          <img src="/assets/icons/youtube.svg" alt="YouTube" />
         </a>
       </section>
 
