--- a/templates/auth/welcome.html
+++ b/templates/auth/welcome.html
@@ -9,7 +9,7 @@
   <body>
     <header class="header">
       <img
-        src="assets/images/main-logo.png"
+        src="/assets/images/main-logo.png"
         alt="Grundriss Schmiede GmbH Logo"
       />
     </header>
@@ -32,17 +32,15 @@
           Bestellungen aufgeben und den Fortschritt Ihrer Grundrisse verfolgen.
         </p>
 
-        <div class="">
-          <span>Zum Kundenbereich gelangen Sie</span>
-          <a
-            class="link"
-            href="https://www.grundriss-schmiede.de/kundenbereich"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <strong>hier</strong></a
-          >.
-        </div>
+        <span>Zum Kundenbereich gelangen Sie</span>
+        <a
+          class="link"
+          href="https://www.grundriss-schmiede.de/kundenbereich"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <strong>hier</strong></a
+        >.
       </section>
     </main>
 
@@ -58,28 +56,28 @@
           target="_blank"
           rel="noopener noreferrer"
         >
-          <img src="assets/icons/facebook.svg" alt="Facebook" />
+          <img src="/assets/icons/facebook.svg" alt="Facebook" />
         </a>
         <a
           href="https://www.instagram.com/grundrissschmiede/#"
           target="_blank"
           rel="noopener noreferrer"
         >
-          <img src="assets/icons/instagram.svg" alt="Instagram" />
+          <img src="/assets/icons/instagram.svg" alt="Instagram" />
         </a>
         <a
           href="https://www.linkedin.com/company/grundriss-schmiede"
           target="_blank"
           rel="noopener noreferrer"
         >
-          <img src="assets/icons/linkedin.svg" alt="LinkedIn" />
+          <img src="/assets/icons/linkedin.svg" alt="LinkedIn" />
         </a>
         <a
           href="https://www.youtube.com/@Spacelutions-Deutschland"
           target="_blank"
           rel="noopener noreferrer"
         >
-          <img src="assets/icons/youtube.svg" alt="YouTube" />
+          <img src="/assets/icons/youtube.svg" alt="YouTube" />
         </a>
       </section>
 
