Füge neue HTML-Vorlagen für Account-Verifizierung und -Löschung hinzu; aktualisiere bestehende Vorlagen für E-Mail-Änderung und Passwortänderung

--- a/templates/auth/account-deleted.html
+++ b/templates/auth/account-deleted.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/styles/styles.css" />
-    <title>Subuser erfolgreich verifiziert - Grundriss Schmiede GmbH</title>
+    <title>Bestätigung Löschung Account - Grundriss Schmiede GmbH</title>
   </head>
   <body>
     <header class="header">
@@ -18,8 +18,14 @@
       <section>
         <p>Sehr geehrter <strong>Max Mustermann</strong>,</p>
         <p>
-          Ihr Subuser <strong>Maxi Mustermann</strong> wurde erfolgreich
-          erstellt und verifiziert.
+          hiermit bestätigen wir Ihnen, dass Ihr Account bei der Grundriss
+          Schmiede GmbH erfolgreich gelöscht wurde.
+        </p>
+        <p>
+          Wir bedauern, Sie als Nutzer verloren zu haben, und hoffen, dass Sie
+          in Zukunft vielleicht wieder zu uns zurückkehren werden. Sollten Sie
+          Fragen oder Anliegen bezüglich der Löschung Ihres Accounts haben,
+          zögern Sie bitte nicht, uns zu kontaktieren.
         </p>
       </section>
     </main>
