--- a/templates/auth/delete-account-verification.html
+++ b/templates/auth/delete-account-verification.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/styles/styles.css" />
-    <title>Passwort geändert - Grundriss Schmiede GmbH</title>
+    <title>Anfrage Löschung Account - Grundriss Schmiede GmbH</title>
   </head>
   <body>
     <header class="header">
@@ -18,10 +18,21 @@
       <section>
         <p>Sehr geehrter <strong>Max Mustermann</strong>,</p>
         <p>
-          Ihr Passwort wurde erfolgreich geändert. Wenn Sie diese Änderung nicht
-          vorgenommen haben, kontaktieren Sie bitte umgehend unseren
-          Kundensupport.
+          Sie haben die Löschung Ihres Accounts bei der Grundriss Schmiede GmbH
+          angefordert.
         </p>
+        <p>
+          Bitte bestätigen Sie die Löschung Ihres Accounts, indem Sie auf den
+          untenstehenden Button klicken:
+        </p>
+        <a
+          href="{{confirmation_link}}"
+          class="button"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Account löschen
+        </a>
       </section>
     </main>
 
