--- a/templates/notifications/orders/order-cancelation-credit.html
+++ b/templates/notifications/orders/order-cancelation-credit.html
@@ -1,13 +1,14 @@
+<!-- Storno-Bestätigung credit based -->
 <!DOCTYPE html>
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/styles/styles.css" />
-    <title>Bestellbestätigung - Grundriss Schmiede GmbH</title>
+    <title>Storno Bestellung - Grundriss Schmiede GmbH</title>
   </head>
   <body>
-    <header class="header">
+    <header class="hader">
       <img
         src="/assets/images/main-logo.png"
         alt="Grundriss Schmiede GmbH Logo"
@@ -17,27 +18,23 @@
     <main>
       <section>
         <p>Sehr geehrter <strong>Max Mustermann</strong>,</p>
-        <p>Vielen Dank für Ihre Bestellung!</p>
-
-        <div class="highlight">
-          <div class="highlight-details">
-            <span>Auftrags-ID:</span>
-            <span style="font-weight: normal">123456789</span>
-          </div>
-          <div class="highlight-details">
-            <span>Bezeichnung:</span>
-            <span style="font-weight: normal">2D Grundriss</span>
-          </div>
-        </div>
+        <p>
+          wir bestätigen hiermit die Stornierung Ihrer Bestellung mit der
+          Bestellnummer <strong>123456</strong>, die am
+          <strong>01.01.2025</strong> aufgegeben wurde.
+        </p>
 
         <div class="additional-info">
-          <span>Ihre Rechnung finden Sie im</span>
-          <!-- Text bei einer bezahlten Rechnung: Ihre bezahlte Rechnung...  -->
-          <a class="link" href="#" target="_blank" rel="noopener noreferrer"
-            >Kundenbereich</a
+          <span
+            >Die belasteten Credits <strong>150</strong> haben wir Ihnen wieder
+            gutgeschrieben.</span
           >
-          order im Anhang dieser E-Mail.
+          <span>
+            Ihre aktueller Credit-Guthaben beträgt nun
+            <strong>300 Credits</strong>.
+          </span>
         </div>
+
         <div class="additional-info">
           <p>
             Bei Fragen oder Anliegen steht Ihnen unser Kundenservice gerne zur
