--- a/templates/notifications/orders/order-confirmation-credit.html
+++ b/templates/notifications/orders/order-confirmation-credit.html
@@ -31,13 +31,20 @@
         </div>
 
         <div class="additional-info">
-          <span>Ihre Rechnung finden Sie im</span>
-          <!-- Text bei einer bezahlten Rechnung: Ihre bezahlte Rechnung...  -->
-          <a class="link" href="#" target="_blank" rel="noopener noreferrer"
-            >Kundenbereich</a
-          >
-          order im Anhang dieser E-Mail.
+          <span>Wir haben Ihnen <strong>150 Credits</strong> abgebucht.</span>
         </div>
+
+        <div class="additional-info">
+          <span>Ehemaliger Credit-Guthaben: <strong>450 Credits</strong></span>
+        </div>
+
+        <div class="additional-info">
+          <span>
+            Neuer Credit-Guthaben:
+            <strong>300 Credits</strong>.
+          </span>
+        </div>
+
         <div class="additional-info">
           <p>
             Bei Fragen oder Anliegen steht Ihnen unser Kundenservice gerne zur
