--- a/templates/notifications/orders/order-delivery.html
+++ b/templates/notifications/orders/order-delivery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/styles/styles.css" />
-    <title>Bestellbestätigung - Grundriss Schmiede GmbH</title>
+    <title>Lieferung Bestellung - Grundriss Schmiede GmbH</title>
   </head>
   <body>
     <header class="header">
@@ -17,7 +17,7 @@
     <main>
       <section>
         <p>Sehr geehrter <strong>Max Mustermann</strong>,</p>
-        <p>Vielen Dank für Ihre Bestellung!</p>
+        <p>Wir freuen uns, Ihnen heute Ihre Bestellung auszuliefern.</p>
 
         <div class="highlight">
           <div class="highlight-details">
@@ -31,19 +31,38 @@
         </div>
 
         <div class="additional-info">
-          <span>Ihre Rechnung finden Sie im</span>
-          <!-- Text bei einer bezahlten Rechnung: Ihre bezahlte Rechnung...  -->
+          <span>Änderungswünsche können Sie ebenfalls bequem aus Ihrem</span>
           <a class="link" href="#" target="_blank" rel="noopener noreferrer"
             >Kundenbereich</a
           >
-          order im Anhang dieser E-Mail.
+          <span>heraus beauftragen.</span>
         </div>
-        <div class="additional-info">
-          <p>
-            Bei Fragen oder Anliegen steht Ihnen unser Kundenservice gerne zur
-            Verfügung.
-          </p>
-        </div>
+      </section>
+
+      <section class="review-section">
+        <p>
+          Waren Sie mit unserem Service zufrieden? Wir würden uns sehr über Ihre
+          <strong>Google Bewertung</strong> freuen!
+        </p>
+        <a
+          href="https://www.google.com/search?sca_esv=922155461cbe86eb&rlz=1C1CHBF_deDE1181DE1181&si=AMgyJEtREmoPL4P1I5IDCfuA8gybfVI2d5Uj7QMwYCZHKDZ-E-yFExyCI1e3v8PHszkn6p3u0PbmIvdKHesxXu7KOjMI1ikc45hF-4fF9vSChqLbl4yB2ddHT7wCTcTHLl7KweqK8YPYCRqmE-WAblRfnQqwhEgN7w%3D%3D&q=Grundriss+Schmiede+Rezensionen&sa=X&ved=2ahUKEwi4nsi03KiQAxU7QfEDHYqgIaYQ0bkNegQIHRAD&biw=1920&bih=911&dpr=1"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="button"
+          style="margin-bottom: 15px"
+        >
+          Jetzt bewerten
+        </a>
+
+        <p>Oder können wir etwas verbessern? Dann freuen wir uns auf Ihr</p>
+
+        <a
+          href="https://www.grundriss-schmiede.de/impressum"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="button"
+          >Feedback</a
+        >
       </section>
     </main>
 
