--- a/templates/notifications/orders/negative-invoice.html
+++ b/templates/notifications/orders/negative-invoice.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/styles/styles.css" />
-    <title>Bestellbestätigung - Grundriss Schmiede GmbH</title>
+    <title>Negative Rechnung - Grundriss Schmiede GmbH</title>
   </head>
   <body>
     <header class="header">
@@ -17,26 +17,26 @@
     <main>
       <section>
         <p>Sehr geehrter <strong>Max Mustermann</strong>,</p>
-        <p>Vielen Dank für Ihre Bestellung!</p>
 
+        <p>
+          Anbei finden Sie Ihre negative Rechnung für die kürzlich getätigte
+          Bestellung.
+        </p>
         <div class="highlight">
           <div class="highlight-details">
-            <span>Auftrags-ID:</span>
-            <span style="font-weight: normal">123456789</span>
-          </div>
-          <div class="highlight-details">
-            <span>Bezeichnung:</span>
-            <span style="font-weight: normal">2D Grundriss</span>
+            <span>Rechnungsnummer:</span>
+            <span style="font-weight: normal">INV-2024-0001</span>
           </div>
         </div>
+      </section>
 
+      <section>
         <div class="additional-info">
-          <span>Ihre Rechnung finden Sie im</span>
-          <!-- Text bei einer bezahlten Rechnung: Ihre bezahlte Rechnung...  -->
+          <span>Ihre negative Rechnung finden Sie im</span>
           <a class="link" href="#" target="_blank" rel="noopener noreferrer"
             >Kundenbereich</a
           >
-          order im Anhang dieser E-Mail.
+          oder im Anhang dieser E-Mail.
         </div>
         <div class="additional-info">
           <p>
