Entferne veraltete E-Mail-Vorlagen und füge neue Vorlagen für Zahlungsbestätigungen und Zahlungserinnerungen hinzu; aktualisiere bestehende Vorlagen

--- a/templates/notifications/orders/payment-confirmation.html
+++ b/templates/notifications/orders/payment-confirmation.html
@@ -1,11 +1,10 @@
-<!-- Vorlage für 1. Bestellung und weitere Korrekturaufträge -->
 <!DOCTYPE html>
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/styles/styles.css" />
-    <title>Bestellbestätigung - Grundriss Schmiede GmbH</title>
+    <title>Zahlungsbestätigung - Grundriss Schmiede GmbH</title>
   </head>
   <body>
     <header class="header">
@@ -18,33 +17,28 @@
     <main>
       <section>
         <p>Sehr geehrter <strong>Max Mustermann</strong>,</p>
-        <p>Vielen Dank für Ihre Bestellung!</p>
 
-        <div class="highlight">
-          <div class="highlight-details">
-            <span>Auftrags-ID:</span>
-            <span style="font-weight: normal">123456789</span>
-          </div>
-          <div class="highlight-details">
-            <span>Bezeichnung:</span>
-            <span style="font-weight: normal">2D Grundriss</span>
-          </div>
-        </div>
+        <p>
+          wir bestätigen den Eingang Ihrer Zahlung für die Bestellung mit der
+          Auftrags-ID <strong>123456789</strong>.
+        </p>
 
-        <div class="additional-info">
-          <span>Ihre Rechnung finden Sie im</span>
-          <!-- Text bei einer bezahlten Rechnung: Ihre bezahlte Rechnung...  -->
-          <a class="link" href="#" target="_blank" rel="noopener noreferrer"
-            >Kundenbereich</a
-          >
-          order im Anhang dieser E-Mail.
-        </div>
-        <div class="additional-info">
-          <p>
-            Bei Fragen oder Anliegen steht Ihnen unser Kundenservice gerne zur
-            Verfügung.
-          </p>
-        </div>
+        <p>
+          Vielen Dank für Ihre prompte Zahlung. Ihre Bestellung wird nun
+          bearbeitet.
+        </p>
+      </section>
+
+      <section class="customer-portal">
+        <p>Jetzt anmelden und die Prozesse im Kundenportal verfolgen!</p>
+        <a
+          href="https://kundenportal.grundriss-schmiede.de"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="button"
+          aria-label="Zum Kundenportal wechseln"
+          >Zum Kundenportal</a
+        >
       </section>
     </main>
 
