--- a/templates/notifications/orders/reminder/third-reminder.html
+++ b/templates/notifications/orders/reminder/third-reminder.html
@@ -1,11 +1,10 @@
-<!-- Vorlage für 1. Bestellung und weitere Korrekturaufträge -->
 <!DOCTYPE html>
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/styles/styles.css" />
-    <title>Bestellbestätigung - Grundriss Schmiede GmbH</title>
+    <title>3. Zahlungserinnerung - Grundriss Schmiede GmbH</title>
   </head>
   <body>
     <header class="header">
@@ -18,33 +17,25 @@
     <main>
       <section>
         <p>Sehr geehrter <strong>Max Mustermann</strong>,</p>
-        <p>Vielen Dank für Ihre Bestellung!</p>
 
-        <div class="highlight">
-          <div class="highlight-details">
-            <span>Auftrags-ID:</span>
-            <span style="font-weight: normal">123456789</span>
-          </div>
-          <div class="highlight-details">
-            <span>Bezeichnung:</span>
-            <span style="font-weight: normal">2D Grundriss</span>
-          </div>
-        </div>
+        <p>
+          dies ist unsere dritte Erinnerung bezüglich der ausstehenden Zahlung
+          für Ihre Bestellung mit der Auftrags-ID
+          <strong>123456789</strong>.
+        </p>
 
-        <div class="additional-info">
-          <span>Ihre Rechnung finden Sie im</span>
-          <!-- Text bei einer bezahlten Rechnung: Ihre bezahlte Rechnung...  -->
-          <a class="link" href="#" target="_blank" rel="noopener noreferrer"
-            >Kundenbereich</a
-          >
-          order im Anhang dieser E-Mail.
-        </div>
-        <div class="additional-info">
-          <p>
-            Bei Fragen oder Anliegen steht Ihnen unser Kundenservice gerne zur
-            Verfügung.
-          </p>
-        </div>
+        <p>
+          Der ausstehende Betrag beläuft sich auf
+          <strong>150,00 EUR</strong>. Wir bitten Sie, den offenen Betrag
+          umgehend zu begleichen, um weitere Unannehmlichkeiten zu vermeiden.
+        </p>
+
+        <p>
+          Sollte Sie der Zahlung nicht nachkommen, sehen wir uns leider
+          gezwungen, weitere rechtliche Schritte einzuleiten.
+        </p>
+
+        <p>Letzte Zahlungsfrist bis: <strong>29. Juli 2025</strong></p>
       </section>
     </main>
 
