--- a/templates/notifications/orders/reminder/debt-collection.html
+++ b/templates/notifications/orders/reminder/debt-collection.html
@@ -1,11 +1,10 @@
-<!-- Vorlage für 1. Bestellung und weitere Korrekturaufträge -->
 <!DOCTYPE html>
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/assets/styles/styles.css" />
-    <title>Bestellbestätigung - Grundriss Schmiede GmbH</title>
+    <title>Meldung Inkasso - Grundriss Schmiede GmbH</title>
   </head>
   <body>
     <header class="header">
@@ -18,33 +17,19 @@
     <main>
       <section>
         <p>Sehr geehrter <strong>Max Mustermann</strong>,</p>
-        <p>Vielen Dank für Ihre Bestellung!</p>
 
-        <div class="highlight">
-          <div class="highlight-details">
-            <span>Auftrags-ID:</span>
-            <span style="font-weight: normal">123456789</span>
-          </div>
-          <div class="highlight-details">
-            <span>Bezeichnung:</span>
-            <span style="font-weight: normal">2D Grundriss</span>
-          </div>
-        </div>
+        <p>
+          trotz unserer vorherigen Zahlungserinnerungen haben wir bisher keinen
+          Zahlungseingang für Ihre Bestellung mit der Auftrags-ID
+          <strong>123456789</strong> feststellen können.
+        </p>
 
-        <div class="additional-info">
-          <span>Ihre Rechnung finden Sie im</span>
-          <!-- Text bei einer bezahlten Rechnung: Ihre bezahlte Rechnung...  -->
-          <a class="link" href="#" target="_blank" rel="noopener noreferrer"
-            >Kundenbereich</a
-          >
-          order im Anhang dieser E-Mail.
-        </div>
-        <div class="additional-info">
-          <p>
-            Bei Fragen oder Anliegen steht Ihnen unser Kundenservice gerne zur
-            Verfügung.
-          </p>
-        </div>
+        <p>
+          Wir möchten Sie hiermit darüber informieren, dass wir gezwungen sind,
+          den Vorgang an unser <strong>Inkassobüro </strong> weiterzuleiten.
+          Bitte beachten Sie, dass dadurch
+          <strong> zusätzliche Kosten </strong> entstehen können.
+        </p>
       </section>
     </main>
 
