Füge einen Hinweis hinzu, dass die E-Mail ignoriert werden kann, wenn die Anfrage nicht gestellt wurde

--- a/templates/auth/account-verification.html
+++ b/templates/auth/account-verification.html
@@ -33,6 +33,11 @@
         >
           E-Mail-Adresse verifizieren
         </a>
+
+        <p>
+          Wenn Sie diese Anfrage nicht gestellt haben, ignorieren Sie diese
+          E-Mail bitte.
+        </p>
       </section>
     </main>
 
