Korrigiere den Text in der Storno-Bestätigung, um "Ihr aktueller Credit-Guthaben" zu verwenden

--- a/templates/notifications/orders/order-cancelation-credit.html
+++ b/templates/notifications/orders/order-cancelation-credit.html
@@ -30,7 +30,7 @@
             gutgeschrieben.</span
           >
           <span>
-            Ihre aktueller Credit-Guthaben beträgt nun
+            Ihr aktueller Credit-Guthaben beträgt nun
             <strong>300 Credits</strong>.
           </span>
         </div>
